# fastapi_mongo

./: LICENSE  README.md  pyproject.toml
app/: main.py
core/: settings.py
core/services/: db_service.py  logger_service.py
